programming-language/workspace/compiler/tests/fixtures/invalid/missing_main.cb64
# Missing main function
def foo():
    pass
